include/maplibre_native_c/map.h

/** Field mask values for mln_free_camera_options. */
typedef enum mln_free_camera_option_field : uint32_t {
  MLN_FREE_CAMERA_OPTION_POSITION = 1U << 0U,
  MLN_FREE_CAMERA_OPTION_ORIENTATION = 1U << 1U,
} mln_free_camera_option_field;
/** Screen-space inset in logical map pixels. */
typedef struct mln_edge_insets {
  double top;
  double left;
  double bottom;
  double right;
} mln_edge_insets;
/** Three-component vector used by free camera options. */
typedef struct mln_vec3 {
  double x;
  double y;
  double z;
} mln_vec3;
/** Quaternion stored as x, y, z, w components. */
typedef struct mln_quaternion {
  double x;
  double y;
  double z;
  double w;
} mln_quaternion;
/** Free camera position and orientation in MapLibre Native camera space. */
typedef struct mln_free_camera_options {
  uint32_t size;
  uint32_t fields;
  mln_vec3 position;
  mln_quaternion orientation;
} mln_free_camera_options;
/** Geographic coordinate in degrees used by map and projection APIs. */
typedef struct mln_lat_lng {
  /** Latitude in degrees. Input latitude must be finite and within [-90, 90].
   */
  double latitude;
  /** Longitude in degrees. Input longitude must be finite. */
  double longitude;
} mln_lat_lng;
/** UTF-8 text view. The pointer may be null only when size is 0. */
typedef struct mln_string_view {
  /** UTF-8 bytes. Null only when size is 0. */
  const char* data;
  size_t size;
} mln_string_view;
typedef struct mln_json_value mln_json_value;
typedef struct mln_geometry mln_geometry;
/** Coordinate array view. Coordinates are latitude/longitude pairs. */
typedef struct mln_coordinate_span {
  /** Coordinates. Null only when coordinate_count is 0. */
  const mln_lat_lng* coordinates;
  size_t coordinate_count;
} mln_coordinate_span;
/** Polygon ring array view. Each ring is a coordinate span. */
typedef struct mln_polygon_geometry {
  /** Rings. Null only when ring_count is 0. */
  const mln_coordinate_span* rings;
  size_t ring_count;
} mln_polygon_geometry;
/** Multi-line geometry view. Each line is a coordinate span. */
typedef struct mln_multi_line_geometry {
  /** Lines. Null only when line_count is 0. */
  const mln_coordinate_span* lines;
  size_t line_count;
} mln_multi_line_geometry;
/** Multi-polygon geometry view. Each polygon contains ring views. */
typedef struct mln_multi_polygon_geometry {
  /** Polygons. Null only when polygon_count is 0. */
  const mln_polygon_geometry* polygons;
  size_t polygon_count;
} mln_multi_polygon_geometry;
/** Geometry collection view. */
typedef struct mln_geometry_collection {
  /** Child geometries. Null only when geometry_count is 0. */
  const mln_geometry* geometries;
  size_t geometry_count;
} mln_geometry_collection;
/**
 * MapLibre geometry input descriptor graph.
 *
 * Geometry coordinates use mln_lat_lng for consistency with the rest of the C
 * API. They are converted to native geometry points as longitude/latitude.
 * A root geometry descriptor starts at nesting depth 0. Status-returning
 * functions reject geometry collection children past depth 64 with
 * MLN_STATUS_INVALID_ARGUMENT.
 */
typedef struct mln_geometry {
  uint32_t size;
  /** One of mln_geometry_type. */
  uint32_t type;
  union {
    mln_lat_lng point;
    mln_coordinate_span line_string;
    mln_polygon_geometry polygon;
    mln_coordinate_span multi_point;
    mln_multi_line_geometry multi_line_string;
    mln_multi_polygon_geometry multi_polygon;
    mln_geometry_collection geometry_collection;
  } data;
} mln_geometry;
/** JSON value array view. */
typedef struct mln_json_array {
  /** Values. Null only when value_count is 0. */
  const mln_json_value* values;
  size_t value_count;
} mln_json_array;
/** JSON object member view. */
typedef struct mln_json_member {
  mln_string_view key;
  /** Value descriptor. Must not be null. */
  const mln_json_value* value;
} mln_json_member;
/** JSON object member array view. */
typedef struct mln_json_object {
  /** Members. Null only when member_count is 0. */
  const mln_json_member* members;
  size_t member_count;
} mln_json_object;
/**
 * JSON-like value input descriptor graph used by feature properties/states.
 *
 * Input functions reject NaN and infinities for double values because JSON and
 * GeoJSON numbers are finite.
 * A root JSON value descriptor starts at nesting depth 0. Status-returning
 * functions reject array/object children past depth 64 with
 * MLN_STATUS_INVALID_ARGUMENT.
 */
typedef struct mln_json_value {
  uint32_t size;
  /** One of mln_json_value_type. */
  uint32_t type;
  union {
    bool bool_value;
    uint64_t uint_value;
    int64_t int_value;
    double double_value;
    mln_string_view string_value;
    mln_json_array array_value;
    mln_json_object object_value;
  } data;
} mln_json_value;
/** Optional fields for mln_feature_state_selector. */
typedef enum mln_feature_state_selector_field : uint32_t {
  MLN_FEATURE_STATE_SELECTOR_SOURCE_LAYER_ID = 1U << 0U,
  MLN_FEATURE_STATE_SELECTOR_FEATURE_ID = 1U << 1U,
  MLN_FEATURE_STATE_SELECTOR_STATE_KEY = 1U << 2U,
} mln_feature_state_selector_field;
/** Feature-state source, feature, and key selector. */
typedef struct mln_feature_state_selector {
  uint32_t size;
  uint32_t fields;
  /** Source ID. Required and borrowed for the duration of the call. */
  mln_string_view source_id;
  /** Optional source layer ID. Required for vector-source disambiguation. */
  mln_string_view source_layer_id;
  /** Optional feature ID string. Required by set/get and optional for remove.
   */
  mln_string_view feature_id;
  /** Optional state key. Used only by remove and requires feature_id. */
  mln_string_view state_key;
} mln_feature_state_selector;
/** Feature identifier variant tags used by mln_feature. */
typedef enum mln_feature_identifier_type : uint32_t {
  MLN_FEATURE_IDENTIFIER_TYPE_NULL = 0,
  MLN_FEATURE_IDENTIFIER_TYPE_UINT = 1,
  MLN_FEATURE_IDENTIFIER_TYPE_INT = 2,
  MLN_FEATURE_IDENTIFIER_TYPE_DOUBLE = 3,
  MLN_FEATURE_IDENTIFIER_TYPE_STRING = 4,
} mln_feature_identifier_type;
/** GeoJSON feature input descriptor graph. */
typedef struct mln_feature {
  uint32_t size;
  /**
   * Geometry descriptor. Must not be null. Use MLN_GEOMETRY_TYPE_EMPTY for an
   * empty geometry.
   */
  const mln_geometry* geometry;
  /** Property member views. May be null only when property_count is 0. */
  const mln_json_member* properties;
  size_t property_count;
  /** One of mln_feature_identifier_type. */
  uint32_t identifier_type;
  union {
    uint64_t uint_value;
    int64_t int_value;
    double double_value;
    mln_string_view string_value;
  } identifier;
} mln_feature;
/** Feature collection view. */
typedef struct mln_feature_collection {
  /** Features. Null only when feature_count is 0. */
  const mln_feature* features;
  size_t feature_count;
} mln_feature_collection;
/**
 * GeoJSON geometry, feature, or feature collection input descriptor graph.
 * Nested geometry and property descriptors share the 64-depth descriptor limit
 * documented on mln_geometry and mln_json_value.
 */
typedef struct mln_geojson {
  uint32_t size;
  /** One of mln_geojson_type. */
  uint32_t type;
  union {
    /**
     * Geometry descriptor selected by MLN_GEOJSON_TYPE_GEOMETRY. Must not be
     * null.
     */
    const mln_geometry* geometry;
    /**
     * Feature descriptor selected by MLN_GEOJSON_TYPE_FEATURE. Must not be
     * null.
     */
    const mln_feature* feature;
    mln_feature_collection feature_collection;
  } data;
} mln_geojson;