bindings/dart/lib/src/internal/c/maplibre_native_c.g.dart


enum mln_custom_geometry_source_option_field {
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_MIN_ZOOM(1),
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_MAX_ZOOM(2),
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_TOLERANCE(4),
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_TILE_SIZE(8),
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_BUFFER(16),
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_CLIP(32),
  MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_WRAP(64);

  final int value;
  const mln_custom_geometry_source_option_field(this.value);

  static mln_custom_geometry_source_option_field fromValue(int value) =>
      switch (value) {
        1 => MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_MIN_ZOOM,
        2 => MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_MAX_ZOOM,
        4 => MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_TOLERANCE,
        8 => MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_TILE_SIZE,
        16 => MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_BUFFER,
        32 => MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_CLIP,
        64 => MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_WRAP,
        _ => throw ArgumentError(
          'Unknown value for mln_custom_geometry_source_option_field: $value',
        ),
      };
}

final class mln_custom_geometry_source_options extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int fields;

  external mln_custom_geometry_source_tile_callback fetch_tile;

  external mln_custom_geometry_source_tile_callback cancel_tile;

  external ffi.Pointer<ffi.Void> user_data;

  @ffi.Double()
  external double min_zoom;

  @ffi.Double()
  external double max_zoom;

  @ffi.Double()
  external double tolerance;

  @ffi.Uint32()
  external int tile_size;

  @ffi.Uint32()
  external int buffer;

  @ffi.Bool()
  external bool clip;

  @ffi.Bool()
  external bool wrap;

  static ffi.Pointer<mln_custom_geometry_source_options> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required int fields,
    required mln_custom_geometry_source_tile_callback fetch_tile,
    required mln_custom_geometry_source_tile_callback cancel_tile,
    required ffi.Pointer<ffi.Void> user_data,
    required double min_zoom,
    required double max_zoom,
    required double tolerance,
    required int tile_size,
    required int buffer,
    required bool clip,
    required bool wrap,
  }) => $allocator<mln_custom_geometry_source_options>()
    ..ref.size = size
    ..ref.fields = fields
    ..ref.fetch_tile = fetch_tile
    ..ref.cancel_tile = cancel_tile
    ..ref.user_data = user_data
    ..ref.min_zoom = min_zoom
    ..ref.max_zoom = max_zoom
    ..ref.tolerance = tolerance
    ..ref.tile_size = tile_size
    ..ref.buffer = buffer
    ..ref.clip = clip
    ..ref.wrap = wrap;
}

typedef mln_custom_geometry_source_tile_callback =
    ffi.Pointer<
      ffi.NativeFunction<mln_custom_geometry_source_tile_callbackFunction>
    >;
typedef mln_custom_geometry_source_tile_callbackFunction =
    ffi.Void Function(
      ffi.Pointer<ffi.Void> user_data,
      mln_canonical_tile_id tile_id,
    );
typedef Dartmln_custom_geometry_source_tile_callbackFunction =
    void Function(
      ffi.Pointer<ffi.Void> user_data,
      mln_canonical_tile_id tile_id,
    );

final class mln_edge_insets extends ffi.Struct {
  @ffi.Double()
  external double top;

  @ffi.Double()
  external double left;

  @ffi.Double()
  external double bottom;

  @ffi.Double()
  external double right;

  static ffi.Pointer<mln_edge_insets> $allocate(
    ffi.Allocator $allocator, {
    required double top,
    required double left,
    required double bottom,
    required double right,
  }) => $allocator<mln_edge_insets>()
    ..ref.top = top
    ..ref.left = left
    ..ref.bottom = bottom
    ..ref.right = right;
}

final class mln_egl_context_descriptor extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  external ffi.Pointer<ffi.Void> display;

  external ffi.Pointer<ffi.Void> config;

  external ffi.Pointer<ffi.Void> share_context;

  external ffi.Pointer<ffi.Void> get_proc_address;

  static ffi.Pointer<mln_egl_context_descriptor> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required ffi.Pointer<ffi.Void> display,
    required ffi.Pointer<ffi.Void> config,
    required ffi.Pointer<ffi.Void> share_context,
    required ffi.Pointer<ffi.Void> get_proc_address,
  }) => $allocator<mln_egl_context_descriptor>()
    ..ref.size = size
    ..ref.display = display
    ..ref.config = config
    ..ref.share_context = share_context
    ..ref.get_proc_address = get_proc_address;
}

final class mln_feature extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  external ffi.Pointer<mln_geometry> geometry;

  external ffi.Pointer<mln_json_member> properties;

  @ffi.Size()
  external int property_count;

  @ffi.Uint32()
  external int identifier_type;

  external UnnamedUnion$3 identifier;
}

final class mln_feature_collection extends ffi.Struct {
  external ffi.Pointer<mln_feature> features;

  @ffi.Size()
  external int feature_count;

  static ffi.Pointer<mln_feature_collection> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<mln_feature> features,
    required int feature_count,
  }) => $allocator<mln_feature_collection>()
    ..ref.features = features
    ..ref.feature_count = feature_count;
}

typedef mln_feature_extension_result = ffi.Uint64;
typedef Dartmln_feature_extension_result = int;

final class mln_feature_extension_result_info extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int type;

  external UnnamedUnion data;
}

enum mln_feature_extension_result_type {
  MLN_FEATURE_EXTENSION_RESULT_TYPE_VALUE(1),
  MLN_FEATURE_EXTENSION_RESULT_TYPE_FEATURE_COLLECTION(2);

  final int value;
  const mln_feature_extension_result_type(this.value);

  static mln_feature_extension_result_type fromValue(int value) =>
      switch (value) {
        1 => MLN_FEATURE_EXTENSION_RESULT_TYPE_VALUE,
        2 => MLN_FEATURE_EXTENSION_RESULT_TYPE_FEATURE_COLLECTION,
        _ => throw ArgumentError(
          'Unknown value for mln_feature_extension_result_type: $value',
        ),
      };
}

enum mln_feature_identifier_type {
  MLN_FEATURE_IDENTIFIER_TYPE_NULL(0),
  MLN_FEATURE_IDENTIFIER_TYPE_UINT(1),
  MLN_FEATURE_IDENTIFIER_TYPE_INT(2),
  MLN_FEATURE_IDENTIFIER_TYPE_DOUBLE(3),
  MLN_FEATURE_IDENTIFIER_TYPE_STRING(4);

  final int value;
  const mln_feature_identifier_type(this.value);

  static mln_feature_identifier_type fromValue(int value) => switch (value) {
    0 => MLN_FEATURE_IDENTIFIER_TYPE_NULL,
    1 => MLN_FEATURE_IDENTIFIER_TYPE_UINT,
    2 => MLN_FEATURE_IDENTIFIER_TYPE_INT,
    3 => MLN_FEATURE_IDENTIFIER_TYPE_DOUBLE,
    4 => MLN_FEATURE_IDENTIFIER_TYPE_STRING,
    _ => throw ArgumentError(
      'Unknown value for mln_feature_identifier_type: $value',
    ),
  };
}

typedef mln_feature_query_result = ffi.Uint64;
typedef Dartmln_feature_query_result = int;

final class mln_feature_state_selector extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int fields;

  external mln_string_view source_id;

  external mln_string_view source_layer_id;

  external mln_string_view feature_id;

  external mln_string_view state_key;
}

enum mln_feature_state_selector_field {
  MLN_FEATURE_STATE_SELECTOR_SOURCE_LAYER_ID(1),
  MLN_FEATURE_STATE_SELECTOR_FEATURE_ID(2),
  MLN_FEATURE_STATE_SELECTOR_STATE_KEY(4);

  final int value;
  const mln_feature_state_selector_field(this.value);

  static mln_feature_state_selector_field fromValue(int value) =>
      switch (value) {
        1 => MLN_FEATURE_STATE_SELECTOR_SOURCE_LAYER_ID,
        2 => MLN_FEATURE_STATE_SELECTOR_FEATURE_ID,
        4 => MLN_FEATURE_STATE_SELECTOR_STATE_KEY,
        _ => throw ArgumentError(
          'Unknown value for mln_feature_state_selector_field: $value',
        ),
      };
}

enum mln_free_camera_option_field {
  MLN_FREE_CAMERA_OPTION_POSITION(1),
  MLN_FREE_CAMERA_OPTION_ORIENTATION(2);

  final int value;
  const mln_free_camera_option_field(this.value);

  static mln_free_camera_option_field fromValue(int value) => switch (value) {
    1 => MLN_FREE_CAMERA_OPTION_POSITION,
    2 => MLN_FREE_CAMERA_OPTION_ORIENTATION,
    _ => throw ArgumentError(
      'Unknown value for mln_free_camera_option_field: $value',
    ),
  };
}

final class mln_free_camera_options extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int fields;

  external mln_vec3 position;

  external mln_quaternion orientation;
}

final class mln_geojson extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int type;

  external UnnamedUnion$4 data;
}

enum mln_geojson_source_option_field {
  MLN_GEOJSON_SOURCE_OPTION_MIN_ZOOM(1),
  MLN_GEOJSON_SOURCE_OPTION_MAX_ZOOM(2),
  MLN_GEOJSON_SOURCE_OPTION_TOLERANCE(4),
  MLN_GEOJSON_SOURCE_OPTION_CLUSTER_MAX_ZOOM(8),
  MLN_GEOJSON_SOURCE_OPTION_CLUSTER_PROPERTIES(16),
  MLN_GEOJSON_SOURCE_OPTION_TILE_SIZE(32),
  MLN_GEOJSON_SOURCE_OPTION_BUFFER(64),
  MLN_GEOJSON_SOURCE_OPTION_CLUSTER_RADIUS(128),
  MLN_GEOJSON_SOURCE_OPTION_CLUSTER_MIN_POINTS(256),
  MLN_GEOJSON_SOURCE_OPTION_LINE_METRICS(512),
  MLN_GEOJSON_SOURCE_OPTION_CLUSTER(1024),
  MLN_GEOJSON_SOURCE_OPTION_SYNCHRONOUS_UPDATE(2048);

  final int value;
  const mln_geojson_source_option_field(this.value);

  static mln_geojson_source_option_field fromValue(int value) =>
      switch (value) {
        1 => MLN_GEOJSON_SOURCE_OPTION_MIN_ZOOM,
        2 => MLN_GEOJSON_SOURCE_OPTION_MAX_ZOOM,
        4 => MLN_GEOJSON_SOURCE_OPTION_TOLERANCE,
        8 => MLN_GEOJSON_SOURCE_OPTION_CLUSTER_MAX_ZOOM,
        16 => MLN_GEOJSON_SOURCE_OPTION_CLUSTER_PROPERTIES,
        32 => MLN_GEOJSON_SOURCE_OPTION_TILE_SIZE,
        64 => MLN_GEOJSON_SOURCE_OPTION_BUFFER,
        128 => MLN_GEOJSON_SOURCE_OPTION_CLUSTER_RADIUS,
        256 => MLN_GEOJSON_SOURCE_OPTION_CLUSTER_MIN_POINTS,
        512 => MLN_GEOJSON_SOURCE_OPTION_LINE_METRICS,
        1024 => MLN_GEOJSON_SOURCE_OPTION_CLUSTER,
        2048 => MLN_GEOJSON_SOURCE_OPTION_SYNCHRONOUS_UPDATE,
        _ => throw ArgumentError(
          'Unknown value for mln_geojson_source_option_field: $value',
        ),
      };
}

final class mln_geojson_source_options extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int fields;

  @ffi.Double()
  external double min_zoom;

  @ffi.Double()
  external double max_zoom;

  @ffi.Double()
  external double tolerance;

  @ffi.Double()
  external double cluster_max_zoom;

  external ffi.Pointer<mln_json_value> cluster_properties;

  @ffi.Uint32()
  external int tile_size;

  @ffi.Uint32()
  external int buffer;

  @ffi.Uint32()
  external int cluster_radius;

  @ffi.Uint32()
  external int cluster_min_points;

  @ffi.Bool()
  external bool line_metrics;

  @ffi.Bool()
  external bool cluster;

  @ffi.Bool()
  external bool synchronous_update;

  static ffi.Pointer<mln_geojson_source_options> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required int fields,
    required double min_zoom,
    required double max_zoom,
    required double tolerance,
    required double cluster_max_zoom,
    required ffi.Pointer<mln_json_value> cluster_properties,
    required int tile_size,
    required int buffer,
    required int cluster_radius,
    required int cluster_min_points,
    required bool line_metrics,
    required bool cluster,
    required bool synchronous_update,
  }) => $allocator<mln_geojson_source_options>()
    ..ref.size = size
    ..ref.fields = fields
    ..ref.min_zoom = min_zoom
    ..ref.max_zoom = max_zoom
    ..ref.tolerance = tolerance
    ..ref.cluster_max_zoom = cluster_max_zoom
    ..ref.cluster_properties = cluster_properties
    ..ref.tile_size = tile_size
    ..ref.buffer = buffer
    ..ref.cluster_radius = cluster_radius
    ..ref.cluster_min_points = cluster_min_points
    ..ref.line_metrics = line_metrics
    ..ref.cluster = cluster
    ..ref.synchronous_update = synchronous_update;
}
